--- a/macros/items.cfg
+++ b/macros/items.cfg
@@ -3,7 +3,7 @@
 #0 the Crystal Diadem of Allang 	10	leadership, heal +4
 #1 the Silver Ring of Tessolos		10	cure, heal+8
 #2 the Jade Brooch of Vitirra		10	+8 regeneration
-#3 the Phial of Orocia				10	illumination, steadfast
+#3 the Phial of Orosh				10	illumination, steadfast
 #4 the Shroud of Laziel				10	shadowcast, steadfast
 #5 the Mantle of Ignusto			10	skirmish, concealment, nightstalk
 #6 a page from the Necronomicon		10	ranged -25% dam & drain life
@@ -112,7 +112,7 @@
 			type=artifact_illumination
 			[object]
 				silent=yes
-				name=_ "the Phial of Orocia"
+				name=_ "the Phial of Orosh"
 				description= _ "steadfast, illumination"
 				[effect]					
 					apply_to=new_ability
