--- a/scenarios/3p_Orosh.cfg
+++ b/scenarios/3p_Orosh.cfg
@@ -1,12 +1,12 @@
-# 3p-Orocia v4.1 (updated for Wesnoth 1.9.4)
+# 3p-Orosh v4.1 (updated for Wesnoth 1.9.4)
 # by Dovolente - March 2011
  
 
 [multiplayer]
-	id=Dov_MP_Orocia
-	name= _ "3p - Orocia"
+	id=Dov_MP_Orosh
+	name= _ "3p - Orosh"
 
-	#define OROCIA_FIRST_UNIT TYPE X Y
+	#define OROSH_FIRST_UNIT TYPE X Y
 		[unit]
 			side=4
 			type={TYPE}
@@ -16,7 +16,7 @@
 		[/unit]
 	#enddef
 
-	map_data="{~add-ons/Zooko-addon/maps/orocia.map}"
+	map_data="{~add-ons/Zooko-addon/maps/orosh.map}"
 	description= _ "A 3-Player Survival Scenario. Work together to protect a powerful shrine from hordes of invaders. Win by surviving until turn 40. At the start of their turn, a player may get bonus hp, moves, damage, or weapon resistance for a unit."
 	turns="-1"
 	victory_when_enemies_defeated=no
@@ -140,17 +140,17 @@
 		[/hide_unit]
 
 		#bring out the nagas, so they'll advance to attack on the first turn
-		{OROCIA_FIRST_UNIT "Naga Fighter" 6 18}
-		{OROCIA_FIRST_UNIT "Naga Fighter" 25 14}
-		{OROCIA_FIRST_UNIT "Naga Fighter" 11 2}
-		{OROCIA_FIRST_UNIT "Naga Fighter" 18 20}
-		{OROCIA_FIRST_UNIT "Naga Fighter" 21 4}
-		{OROCIA_FIRST_UNIT "Naga Fighter" 3 10}
+		{OROSH_FIRST_UNIT "Naga Fighter" 6 18}
+		{OROSH_FIRST_UNIT "Naga Fighter" 25 14}
+		{OROSH_FIRST_UNIT "Naga Fighter" 11 2}
+		{OROSH_FIRST_UNIT "Naga Fighter" 18 20}
+		{OROSH_FIRST_UNIT "Naga Fighter" 21 4}
+		{OROSH_FIRST_UNIT "Naga Fighter" 3 10}
 	[/event]
 
 	#Handle Data for persistent game statistics. Someday.
-	#{INITIALIZE_STATS Orocia}
-	#{STATS_TURN Orocia}
+	#{INITIALIZE_STATS Orosh}
+	#{STATS_TURN Orosh}
 	
 	[event]
 		name=start
@@ -160,11 +160,11 @@
 		[/message]
 		[message]
 			side=2
-			message= _"We have sworn to defend Our Lady Orocia's shrine from such ruffians, while she sleeps. But to strengthen our defenses, we may need to draw upon the mystic powers ourselves."
+			message= _"We have sworn to defend Our Lady Orosh's shrine from such ruffians, while she sleeps. But to strengthen our defenses, we may need to draw upon the mystic powers ourselves."
 		[/message]
 		[message]
 			side=3
-			message= _"Summon the troops! We'll be ready. We can hold the shrine til Orocia awakens."
+			message= _"Summon the troops! We'll be ready. We can hold the shrine til Orosh awakens."
 		[/message]
 	[/event]
 
@@ -185,7 +185,7 @@
 		[message]
 			speaker=narrator
 			image=portraits/elves/transparent/lady.png
-			caption=_ "Orocia, Goddess of Light"
+			caption=_ "Orosh, Goddess of Light"
 			message=_ "I have awoken! I see that my shrine has been well defended. The Light shine upon you and bless you, my brave warriors."
 		[/message]
 	[/event]
