tweak power-ups

--- a/scenarios/3p_Orosh.cfg
+++ b/scenarios/3p_Orosh.cfg
@@ -99,11 +99,11 @@
 		{PLACE_IMAGE "items/scarecrow.png" 23 9}
 
 		#set bonus amounts
-		{VARIABLE bonus.hp 8}
+		{VARIABLE bonus.hp +20%}
 		{VARIABLE bonus.vs_magic 20}
 		{VARIABLE bonus.vs_weapons 20}
-		{VARIABLE bonus.moves 2}
-		{VARIABLE bonus.damage 2}
+		{VARIABLE bonus.moves +20%}
+		{VARIABLE bonus.damage +20%}
 
 		[objectives]
 			[objective]
