--- a/scenarios/3p_Orosh.cfg
+++ b/scenarios/3p_Orosh.cfg
@@ -32,43 +32,6 @@
    		gold=75
 		color=purple
 		color_lock=true
-      	team_name=defenders
-      	user_team_name= _ "Defenders"
-		team_lock=yes
-   	[/side]
-
-	[side]
-		description=Human
-   		side=2
-   		canrecruit=yes
-   		controller=human 
-		gold=75
-      	team_name=defenders
-		color=blue
-		color_lock=true
-      	user_team_name= _ "Defenders"
-		team_lock=yes
-   	[/side]
-
-	[side]
-		description=Human
-	   	side=3
-   		canrecruit=yes
-		enemy=4 
-	   	controller=human 
-		gold=75
-      	team_name=defenders
-		color=green
-		color_lock=yes
-      	user_team_name= _ "Defenders"
-		team_lock=yes
-	[/side]
-
-	[side]
-   		side=4
-   		controller=ai
-   		canrecruit=no 
-            allow_player=no
 		[ai]
 	 	   aggression=1
 		   caution=0.0
@@ -79,15 +42,109 @@
 				radius=2
 				value=100
 			[/protect_location]
-	      [/ai]
+	[goal]
+		name=target_location
+		[criteria] #NOTE: this is a SLF, because we're targeting a location
+            x=13,14,14,15
+            y=10,9,10,10
+        [/criteria]
+        value=5
+		[/goal]
+		  [/ai]
+	  	team_name=defenders
+	  	user_team_name= _ "Defenders"
+		team_lock=yes
+   	[/side]
+
+	[side]
+		description=Human
+   		side=2
+   		canrecruit=yes
+   		controller=human 
+		gold=75
+		[ai]
+	 	   aggression=1
+		   caution=0.0
+		   grouping=no
+			[protect_location]
+				x=14
+				y=11
+				radius=2
+				value=100
+			[/protect_location]
+	[goal]
+		name=target_location
+		[criteria] #NOTE: this is a SLF, because we're targeting a location
+            x=12,12,13,13
+            y=11,12,12,13
+        [/criteria]
+        value=5
+		[/goal]
+		  [/ai]
+	  	team_name=defenders
+		color=blue
+		color_lock=true
+	  	user_team_name= _ "Defenders"
+		team_lock=yes
+   	[/side]
+
+	[side]
+		description=Human
+	   	side=3
+   		canrecruit=yes
+		enemy=4 
+	   	controller=human 
+		gold=75
+		[ai]
+	 	   aggression=1
+		   caution=0.0
+		   grouping=no
+			[protect_location]
+				x=14
+				y=11
+				radius=2
+				value=100
+			[/protect_location]
+	[goal]
+		name=target_location
+		[criteria] #NOTE: this is a SLF, because we're targeting a location
+            x=12,12,13,13
+            y=16,16,15,15
+        [/criteria]
+        value=5
+		[/goal]
+		  [/ai]
+	  	team_name=defenders
+		color=green
+		color_lock=yes
+	  	user_team_name= _ "Defenders"
+		team_lock=yes
+	[/side]
+
+	[side]
+   		side=4
+   		controller=ai
+   		canrecruit=no 
+			allow_player=no
+		[ai]
+	 	   aggression=1
+		   caution=0.0
+		   grouping=no
+			[protect_location]
+				x=14
+				y=11
+				radius=2
+				value=100
+			[/protect_location]
+		  [/ai]
 		team_name=crusaders
 		gold=0
-      	user_team_name= _ "Defilers"
+	  	user_team_name= _ "Defilers"
 		team_lock=yes
 		color=black
 		color_lock=true
 		hidden=yes
-            no_leader=yes
+			no_leader=yes
 	[/side]
 
 	[event]
@@ -115,11 +172,11 @@
 			[/note]
 			[note]
 				description=_"Bonuses:	
-     <span color='#BCB088' weight='bold'>damage</span>: $bonus.damage
-     <span color='#BCB088' weight='bold'>hp</span>: $bonus.hp
-     <span color='#BCB088' weight='bold'>moves</span>: $bonus.moves
-     <span color='#BCB088' weight='bold'>vs_magic</span>: $bonus.vs_magic (improves defense against arcane, fire, and cold)
-     <span color='#BCB088' weight='bold'>vs_weapons</span>: $bonus.vs_weapons (improves defense against impact, pierce, and blade)"
+	 <span color='#BCB088' weight='bold'>damage</span>: $bonus.damage
+	 <span color='#BCB088' weight='bold'>hp</span>: $bonus.hp
+	 <span color='#BCB088' weight='bold'>moves</span>: $bonus.moves
+	 <span color='#BCB088' weight='bold'>vs_magic</span>: $bonus.vs_magic (improves defense against arcane, fire, and cold)
+	 <span color='#BCB088' weight='bold'>vs_weapons</span>: $bonus.vs_weapons (improves defense against impact, pierce, and blade)"
 			[/note]
 			[note]
 				description=_"See the <b>Dov MP Pack</b> thread on the official forums (multiplayer board) for info or to give feedback."
