combine vs_magic and vs_physical into one

--- a/macros/empowerments.cfg
+++ b/macros/empowerments.cfg
@@ -20,14 +20,14 @@
 			side={SIDE}
 		[/have_unit]
 		[then]
-			{RANDOM 1..5}
+			{RANDOM 1..4}
 			[switch]
 				variable=random
 				[case]
 					value=1
-					# RESIST MAGIC/ELEMENTS
+					# RESISTANCE
 
-					{VARIABLE bonus_desc (_"vs_magic")}
+					{VARIABLE bonus_desc (_"resistance")}
 					[object]
 				    		silent=yes
 						[filter]
@@ -54,18 +54,6 @@
 								arcane=-$bonus.$bonus_desc
 							[/resistance]
 						[/effect]
-					[/object]
-				[/case]
-				[case]
-					value=2
-					# RESIST WEAPONS
-
-					{VARIABLE bonus_desc "vs_weapons"}
-					[object]
-				    		silent=yes
-						[filter]
-							x,y={X},{Y}
-						[/filter]
 						[effect]
 							apply_to=resistance
 							replace=no
@@ -90,20 +78,20 @@
 					[/object]
 				[/case]
 				[case]
-					value=3
+					value=2
 					# HP BONUS 
 					{VARIABLE bonus_desc "hp"}
 					{DOV_EFFECT hitpoints increase_total $bonus.$bonus_desc {X} {Y}}
 					{DOV_EFFECT hitpoints increase $bonus.$bonus_desc {X} {Y}}
 				[/case]
 				[case]
-					value=4
+					value=3
 					# DAMAGE BONUS
 					{VARIABLE bonus_desc "damage"}
 					{DOV_EFFECT attack increase_damage $bonus.$bonus_desc {X} {Y}}
 				[/case]
 				[case]
-					value=5
+					value=4
 					# MOVES BONUS
 					{VARIABLE bonus_desc "moves"}
 					{DOV_EFFECT movement increase $bonus.$bonus_desc {X} {Y}}
