--- a/scenarios/3p_Orosh.cfg
+++ b/scenarios/3p_Orosh.cfg
@@ -1,5 +1,6 @@
-# 3p-Orosh v4.1 (updated for Wesnoth 1.9.4)
+# 3p-Orosh v5.0 (updated for Wesnoth 1.10)
 # by Dovolente - March 2011
+# by Zooko - November 2014
  
 
 [multiplayer]
@@ -17,7 +18,7 @@
 	#enddef
 
 	map_data="{~add-ons/Zooko-addon/maps/orosh.map}"
-	description= _ "A 3-Player Survival Scenario. Work together to protect a powerful shrine from hordes of invaders. Win by surviving until turn 40. At the start of their turn, a player may get bonus hp, moves, damage, or weapon resistance for a unit."
+	description= _ "A 3-Player Survival Scenario. Work together to protect a powerful shrine from hordes of invaders. Win by surviving until turn 40. At the start of their turn, a player may get bonus hp, moves, damage, or resistance for their units."
 	turns="-1"
 	victory_when_enemies_defeated=no
 	experience_modifier=70%
@@ -32,26 +33,39 @@
    		gold=75
 		color=purple
 		color_lock=true
-		[ai]
-	 	   aggression=1
-		   caution=0.0
-		   grouping=no
-			[protect_location]
-				x=14
-				y=11
-				radius=2
-				value=100
-			[/protect_location]
-	[goal]
-		name=target_location
-		[criteria] #NOTE: this is a SLF, because we're targeting a location
-            x=13,14,14,15
-            y=10,9,10,10
-        [/criteria]
-        value=5
-		[/goal]
-		  [/ai]
-	  	team_name=defenders
+# 		[ai]
+# 			caution=1.5
+# 			grouping="offensive"
+# 			[goal]
+# 				name=target_location
+# 				[criteria] #NOTE: this is a SLF, because we're targeting a location
+# 					x,y=13,10
+# 				[/criteria]
+# 				value=500000
+# 			[/goal]
+# 			[goal]
+# 				name=target_location
+# 				[criteria] #NOTE: this is a SLF, because we're targeting a location
+# 					x,y=14,9
+# 				[/criteria]
+# 				value=500000
+# 			[/goal]
+# 			[goal]
+# 				name=target_location
+# 				[criteria] #NOTE: this is a SLF, because we're targeting a location
+# 					x,y=14,10
+# 				[/criteria]
+# 				value=500000
+# 			[/goal]
+# 			[goal]
+# 				name=target_location
+# 				[criteria] #NOTE: this is a SLF, because we're targeting a location
+# 					x,y=15,10
+# 				[/criteria]
+# 				value=500000
+# 			[/goal]
+# 	        [/ai]
+       	team_name=defenders
 	  	user_team_name= _ "Defenders"
 		team_lock=yes
    	[/side]
@@ -62,25 +76,39 @@
    		canrecruit=yes
    		controller=human 
 		gold=75
-		[ai]
-	 	   aggression=1
-		   caution=0.0
-		   grouping=no
-			[protect_location]
-				x=14
-				y=11
-				radius=2
-				value=100
-			[/protect_location]
-	[goal]
-		name=target_location
-		[criteria] #NOTE: this is a SLF, because we're targeting a location
-            x=12,12,13,13
-            y=11,12,12,13
-        [/criteria]
-        value=5
-		[/goal]
-		  [/ai]
+# 		[ai]
+# 			aggression=-2.0
+# 			caution=1.5
+# 			grouping="offensive"
+# 			[goal]
+# 				name=target_location
+# 				[criteria] #NOTE: this is a SLF, because we're targeting a location
+# 					x,y=12,11
+# 				[/criteria]
+# 				value=500000
+# 			[/goal]
+# 			[goal]
+# 				name=target_location
+# 				[criteria] #NOTE: this is a SLF, because we're targeting a location
+# 					x,y=12,12
+# 				[/criteria]
+# 				value=500000
+# 			[/goal]
+# 			[goal]
+# 				name=target_location
+# 				[criteria] #NOTE: this is a SLF, because we're targeting a location
+# 					x,y=13,12
+# 				[/criteria]
+# 				value=500000
+# 			[/goal]
+# 			[goal]
+# 				name=target_location
+# 				[criteria] #NOTE: this is a SLF, because we're targeting a location
+# 					x,y=13,13
+# 				[/criteria]
+# 				value=500000
+# 			[/goal]
+# 		  [/ai]
 	  	team_name=defenders
 		color=blue
 		color_lock=true
@@ -95,25 +123,39 @@
 		enemy=4 
 	   	controller=human 
 		gold=75
-		[ai]
-	 	   aggression=1
-		   caution=0.0
-		   grouping=no
-			[protect_location]
-				x=14
-				y=11
-				radius=2
-				value=100
-			[/protect_location]
-	[goal]
-		name=target_location
-		[criteria] #NOTE: this is a SLF, because we're targeting a location
-            x=12,12,13,13
-            y=16,16,15,15
-        [/criteria]
-        value=5
-		[/goal]
-		  [/ai]
+# 		[ai]
+# 			aggression=-2.0
+# 			caution=1.5
+# 			grouping="offensive"
+# 			[goal]
+# 				name=target_location
+# 				[criteria] #NOTE: this is a SLF, because we're targeting a location
+# 					x,y=15,12
+# 				[/criteria]
+# 				value=500000
+# 			[/goal]
+# 			[goal]
+# 				name=target_location
+# 				[criteria] #NOTE: this is a SLF, because we're targeting a location
+# 					x,y=16,11
+# 				[/criteria]
+# 				value=500000
+# 			[/goal]
+# 			[goal]
+# 				name=target_location
+# 				[criteria] #NOTE: this is a SLF, because we're targeting a location
+# 					x,y=16,12
+# 				[/criteria]
+# 				value=500000
+# 			[/goal]
+# 			[goal]
+# 				name=target_location
+# 				[criteria] #NOTE: this is a SLF, because we're targeting a location
+# 					x,y=15,13
+# 				[/criteria]
+# 				value=500000
+# 			[/goal]
+# 		  [/ai]
 	  	team_name=defenders
 		color=green
 		color_lock=yes
@@ -126,17 +168,6 @@
    		controller=ai
    		canrecruit=no 
 			allow_player=no
-		[ai]
-	 	   aggression=1
-		   caution=0.0
-		   grouping=no
-			[protect_location]
-				x=14
-				y=11
-				radius=2
-				value=100
-			[/protect_location]
-		  [/ai]
 		team_name=crusaders
 		gold=0
 	  	user_team_name= _ "Defilers"
@@ -150,6 +181,10 @@
 	[event]
 		name=prestart
 
+		{MODIFY_AI_ADD_SIMPLE_ASPECT 1 aggression * -3.0}
+		{MODIFY_AI_ADD_SIMPLE_ASPECT 2 aggression * -3.0}
+		{MODIFY_AI_ADD_SIMPLE_ASPECT 3 aggression * -3.0}
+
 		{PLACE_IMAGE "scenery/temple1.png" 14 11}
 		{PLACE_IMAGE "items/scarecrow.png" 7 6}
 		{PLACE_IMAGE "items/scarecrow.png" 12 19}
@@ -157,8 +192,7 @@
 
 		#set bonus amounts
 		{VARIABLE bonus.hp +20%}
-		{VARIABLE bonus.vs_magic 20}
-		{VARIABLE bonus.vs_weapons 20}
+		{VARIABLE bonus.resistance 15}
 		{VARIABLE bonus.moves +20%}
 		{VARIABLE bonus.damage +20%}
 
@@ -168,15 +202,14 @@
 				condition=win
 			[/objective]
 			[note]
-				description=_"At the start of your turn, any of your units may receive a bonus if they are within the castle walls and on the grassy area on your side of the shrine."
+				description=_"At the start of your turn, any of your units may receive a bonus if they are within the castle walls and on the grassy area on your side of the shrine. v5.0.11"
 			[/note]
 			[note]
 				description=_"Bonuses:	
 	 <span color='#BCB088' weight='bold'>damage</span>: $bonus.damage
 	 <span color='#BCB088' weight='bold'>hp</span>: $bonus.hp
 	 <span color='#BCB088' weight='bold'>moves</span>: $bonus.moves
-	 <span color='#BCB088' weight='bold'>vs_magic</span>: $bonus.vs_magic (improves defense against arcane, fire, and cold)
-	 <span color='#BCB088' weight='bold'>vs_weapons</span>: $bonus.vs_weapons (improves defense against impact, pierce, and blade)"
+	 <span color='#BCB088' weight='bold'>resistance</span>: $bonus.resistance"
 			[/note]
 			[note]
 				description=_"See the <b>Dov MP Pack</b> thread on the official forums (multiplayer board) for info or to give feedback."
