--- a/scenarios/3p_Orosh.cfg
+++ b/scenarios/3p_Orosh.cfg
@@ -18,7 +18,7 @@
 	#enddef
 
 	map_data="{~add-ons/Zooko-addon/maps/orosh.map}"
-	description= _ "A 3-Player Survival Scenario. Work together to protect a powerful shrine from hordes of invaders. Win by surviving until turn 40. At the start of their turn, a player may get bonus hp, moves, damage, or resistance for their units."
+	description= _ "A 3-Player Survival Scenario. Work together to protect a powerful shrine from hordes of invaders. Win by surviving until turn 44. At the start of their turn, a player may get bonus hp, moves, damage, or resistance for their units."
 	turns="-1"
 	victory_when_enemies_defeated=no
 	experience_modifier=70%
@@ -30,8 +30,6 @@
    		side=1 
    		canrecruit=yes
    		controller=human 
-   		gold=85
-		color=purple
 		color_lock=true
 # 		[ai]
 # 			caution=1.5
@@ -65,7 +63,10 @@
 # 				value=500000
 # 			[/goal]
 # 	        [/ai]
-       	team_name=defenders
+       		team_name=defenders
+		gold=75
+		color=purple
+		color_lock=true
 	  	user_team_name= _ "Defenders"
 		team_lock=yes
    	[/side]
@@ -75,7 +76,6 @@
    		side=2
    		canrecruit=yes
    		controller=human 
-		gold=85
 # 		[ai]
 # 			aggression=-2.0
 # 			caution=1.5
@@ -110,6 +110,7 @@
 # 			[/goal]
 # 		  [/ai]
 	  	team_name=defenders
+		gold=75
 		color=blue
 		color_lock=true
 	  	user_team_name= _ "Defenders"
@@ -122,7 +123,6 @@
    		canrecruit=yes
 		enemy=4 
 	   	controller=human 
-		gold=85
 # 		[ai]
 # 			aggression=-2.0
 # 			caution=1.5
@@ -157,6 +157,7 @@
 # 			[/goal]
 # 		  [/ai]
 	  	team_name=defenders
+		gold=75
 		color=green
 		color_lock=yes
 	  	user_team_name= _ "Defenders"
@@ -191,18 +192,18 @@
 		{PLACE_IMAGE "items/scarecrow.png" 23 9}
 
 		#set bonus amounts
-		{VARIABLE bonus.hp +25%}
-		{VARIABLE bonus.resistance 20}
-		{VARIABLE bonus.moves +25%}
-		{VARIABLE bonus.damage +25%}
+		{VARIABLE bonus.hp +15%}
+		{VARIABLE bonus.resistance 10}
+		{VARIABLE bonus.moves +15%}
+		{VARIABLE bonus.damage +20%}
 
 		[objectives]
 			[objective]
-				description=_"Survive til turn 40."
+				description=_"Survive til turn 44."
 				condition=win
 			[/objective]
 			[note]
-				description=_"At the start of your turn, any of your units may receive a bonus if they are within the castle walls and on the grassy area on your side of the shrine. v5.0.11"
+				description=_"At the start of your turn, any of your units may receive a bonus if they are within the castle walls and on the grassy area on your side of the shrine. v5.0.18"
 			[/note]
 			[note]
 				description=_"Bonuses:	
@@ -259,7 +260,7 @@
 	[/event]
 
 	[event]
-		name=turn 40
+		name=turn 44
 		[endlevel]
 			result=victory
 		[/endlevel]
@@ -339,75 +340,75 @@
 	{DOV_WAVE 5 (
 		{LAND_A_2 "Walking Corpse"}
 		{LAND_B_1 "Walking Corpse"}
-		{VARIABLE next_wave_label "Turn 8: Loyalists"}
+		{VARIABLE next_wave_label "Turn 9: Loyalists"}
 	)}
 
-	{DOV_WAVE 8 (
+	{DOV_WAVE 9 (
 		{LAND_B_1 "Mage"}
 		{LAND_B_2 "Spearman"}
 		{LAND_A_2 "Cavalryman"}
-		{VARIABLE next_wave_label "Turn 11: Northerners"}
-	)}
-
-	{DOV_WAVE 11 (
-		{LAND_B_2 "Orcish Archer"}
-		{LAND_A_1 "Troll"}
-		{LAND_A_2 "Wolf Rider"}
-		{VARIABLE next_wave_label "Turn 14: Elves"}
+		{VARIABLE next_wave_label "Turn 14: Northerners"}
 	)}
 
 	{DOV_WAVE 14 (
+		{LAND_B_2 "Orcish Archer"}
+		{LAND_A_1 "Troll"}
+		{LAND_A_2 "Wolf Rider"}
+		{VARIABLE next_wave_label "Turn 18: Elves"}
+	)}
+
+	{DOV_WAVE 18 (
 		{LAND_B_1 "Elvish Captain"}
 		{LAND_B_2 "Elvish Archer"}
 		{LAND_A_2 "Wose"}
 		{BORDER_2 "Merman Hunter"}
-		{VARIABLE next_wave_label "Turn 18: Ogres and Netcasters"}
+		{VARIABLE next_wave_label "Turn 22: Ogres and Netcasters"}
 	)}
 
-	{DOV_WAVE 18 (
+	{DOV_WAVE 22 (
 		{LAND_A_3 "Young Ogre"}
 		{LAND_B_2 "Ogre"}
 		{BORDER_1 "Merman Netcaster"}
-		{VARIABLE next_wave_label "Turn 20: Bats and Shadows"}
+		{VARIABLE next_wave_label "Turn 24: Bats and Shadows"}
 	)}
 
-	{DOV_WAVE 20 (
+	{DOV_WAVE 24 (
 		{BORDER_2 "Blood Bat"}
 		{LAND_A_3 "Vampire Bat"}
 		{LAND_B_2 "Shadow"}
-		{VARIABLE next_wave_label "Turn 23: Drakes"}
+		{VARIABLE next_wave_label "Turn 27: Drakes"}
 	)}
 
-	{DOV_WAVE 23 (
+	{DOV_WAVE 27 (
 		{LAND_A_2 "Drake Fighter"}
 		{LAND_B_1 "Drake Warrior"}	
 		{LAND_B_2 "Drake Clasher"}
 		{BORDER_1 "Drake Burner"}
-		{VARIABLE next_wave_label "Turn 27: Knalgans"}
+		{VARIABLE next_wave_label "Turn 31: Knalgans"}
 	)}
 
-	{DOV_WAVE 27 (
+	{DOV_WAVE 31 (
 		{BORDER_2 "Gryphon Rider"}
 		{LAND_B_2 "Dwarvish Berserker"}
 		{LAND_A_2 "Dwarvish Thunderguard"}
-		{VARIABLE next_wave_label "Turn 30: Knights"}
+		{VARIABLE next_wave_label "Turn 34: Knights"}
 	)}
 
-	{DOV_WAVE 30 (
+	{DOV_WAVE 34 (
 		{LAND_B_2 "Knight"}
 		{LAND_B_1 "Paladin"}
 		{LAND_A_2 "Lancer"}
-		{VARIABLE next_wave_label "Turn 32: Mages and Sorcerers"}
+		{VARIABLE next_wave_label "Turn 36: Mages and Sorcerers"}
 	)}
 
-	{DOV_WAVE 32 (
+	{DOV_WAVE 36 (
 		{LAND_B_3 "Red Mage"}
 		{LAND_A_2 "Dark Sorcerer"}
 		{LAND_A_1 "Silver Mage"}
-		{VARIABLE next_wave_label "Turn 35: Saurians"}
+		{VARIABLE next_wave_label "Turn 39: Saurians"}
 	)}
 
-	{DOV_WAVE 35 (
+	{DOV_WAVE 39 (
 		{BORDER_2 "Saurian Skirmisher"}
 		{LAND_A_3 "Saurian Ambusher"}
 		{LAND_A_2 "Saurian Soothsayer"}
@@ -415,17 +416,17 @@
 		{LAND_B_1 "Saurian Oracle"}
 		{LAND_B_2 "Saurian Soothsayer"}
 		{LAND_B_3 "Saurian Ambusher"}
-		{VARIABLE next_wave_label "Turn 36: Assassins"}
+		{VARIABLE next_wave_label "Turn 40: Assassins"}
 	)}
 
-	{DOV_WAVE 36 (
+	{DOV_WAVE 40 (
 		{LAND_A_1 "Orcish Slayer"}
 		{LAND_A_2 "Orcish Slayer"}
 		{LAND_A_3 "Orcish Slayer"}
 		{LAND_B_1 "Assassin"}
 		{LAND_B_2 "Assassin"}
 		{LAND_B_3 "Assassin"}
-		{VARIABLE next_wave_label "Turn 40: WIN!"}
+		{VARIABLE next_wave_label "Turn 44: WIN!"}
 	)}
 
 [/multiplayer]
