--- a/scenarios/3p_Orosh.cfg
+++ b/scenarios/3p_Orosh.cfg
@@ -18,7 +18,7 @@
 	#enddef
 
 	map_data="{~add-ons/Zooko-addon/maps/orosh.map}"
-	description= _ "A 3-Player Survival Scenario. Work together to protect a powerful shrine from hordes of invaders. Win by surviving until turn 45. At the start of their turn, a player may get bonus hp, moves, damage, or resistance for their units."
+	description= _ "A 3-Player Survival Scenario. Work together to protect a powerful shrine from hordes of invaders. Win by surviving until turn 46. At the start of their turn, a player may get bonus hp, moves, damage, or resistance for their units."
 	turns="-1"
 	victory_when_enemies_defeated=no
 	experience_modifier=70%
@@ -192,18 +192,18 @@
 		{PLACE_IMAGE "items/scarecrow.png" 23 9}
 
 		#set bonus amounts
-		{VARIABLE bonus.hp +15%}
+		{VARIABLE bonus.hp +20%}
 		{VARIABLE bonus.resistance 10}
-		{VARIABLE bonus.moves +15%}
+		{VARIABLE bonus.moves +1}
 		{VARIABLE bonus.damage +20%}
 
 		[objectives]
 			[objective]
-				description=_"Survive til turn 45."
+				description=_"Survive til turn 46."
 				condition=win
 			[/objective]
 			[note]
-				description=_"At the start of your turn, any of your units may receive a bonus if they are within the castle walls and on the grassy area on your side of the shrine. v5.0.18"
+				description=_"At the start of your turn, any of your units may receive a bonus if they are within the castle walls and on the grassy area on your side of the shrine. v5.0.20"
 			[/note]
 			[note]
 				description=_"Bonuses:	
@@ -260,7 +260,7 @@
 	[/event]
 
 	[event]
-		name=turn 45
+		name=turn 46
 		[endlevel]
 			result=victory
 		[/endlevel]
@@ -329,86 +329,86 @@
 
 	{DOV_WAVE 2 (
 		{LAND_A_2 "Thug"}{LAND_B_3 "Peasant"}
-		{VARIABLE next_wave_label "Turn 4: Ghosts"}
+		{VARIABLE next_wave_label "Turn 5: Ghosts"}
 	)}
 
-	{DOV_WAVE 4 (
+	{DOV_WAVE 5 (
 		{BORDER_2 "Ghost"}
-		{VARIABLE next_wave_label "Turn 6: Walking Corpses"}
+		{VARIABLE next_wave_label "Turn 7: Walking Corpses"}
 	)}
 
-	{DOV_WAVE 6 (
+	{DOV_WAVE 7 (
 		{LAND_A_2 "Walking Corpse"}
 		{LAND_B_1 "Walking Corpse"}
-		{VARIABLE next_wave_label "Turn 10: Loyalists"}
+		{VARIABLE next_wave_label "Turn 11: Loyalists"}
 	)}
 
-	{DOV_WAVE 10 (
+	{DOV_WAVE 11 (
 		{LAND_B_1 "Mage"}
 		{LAND_B_2 "Spearman"}
 		{LAND_A_2 "Cavalryman"}
-		{VARIABLE next_wave_label "Turn 15: Northerners"}
+		{VARIABLE next_wave_label "Turn 16: Northerners"}
 	)}
 
-	{DOV_WAVE 15 (
+	{DOV_WAVE 16 (
 		{LAND_B_2 "Orcish Archer"}
 		{LAND_A_1 "Troll"}
 		{LAND_A_2 "Wolf Rider"}
-		{VARIABLE next_wave_label "Turn 19: Elves"}
+		{VARIABLE next_wave_label "Turn 20: Elves"}
 	)}
 
-	{DOV_WAVE 19 (
+	{DOV_WAVE 20 (
 		{LAND_B_1 "Elvish Captain"}
 		{LAND_B_2 "Elvish Archer"}
 		{LAND_A_2 "Wose"}
 		{BORDER_2 "Merman Hunter"}
-		{VARIABLE next_wave_label "Turn 23: Ogres and Netcasters"}
+		{VARIABLE next_wave_label "Turn 24: Ogres and Netcasters"}
 	)}
 
-	{DOV_WAVE 23 (
+	{DOV_WAVE 24 (
 		{LAND_A_3 "Young Ogre"}
 		{LAND_B_2 "Ogre"}
 		{BORDER_1 "Merman Netcaster"}
-		{VARIABLE next_wave_label "Turn 25: Bats and Shadows"}
+		{VARIABLE next_wave_label "Turn 26: Bats and Shadows"}
 	)}
 
-	{DOV_WAVE 25 (
+	{DOV_WAVE 26 (
 		{BORDER_2 "Blood Bat"}
 		{LAND_A_3 "Vampire Bat"}
 		{LAND_B_2 "Shadow"}
-		{VARIABLE next_wave_label "Turn 28: Drakes"}
+		{VARIABLE next_wave_label "Turn 29: Drakes"}
 	)}
 
-	{DOV_WAVE 28 (
+	{DOV_WAVE 29 (
 		{LAND_A_2 "Drake Fighter"}
 		{LAND_B_1 "Drake Warrior"}	
 		{LAND_B_2 "Drake Clasher"}
 		{BORDER_1 "Drake Burner"}
-		{VARIABLE next_wave_label "Turn 32: Knalgans"}
+		{VARIABLE next_wave_label "Turn 33: Knalgans"}
 	)}
 
-	{DOV_WAVE 32 (
+	{DOV_WAVE 33 (
 		{BORDER_2 "Gryphon Rider"}
 		{LAND_B_2 "Dwarvish Berserker"}
 		{LAND_A_2 "Dwarvish Thunderguard"}
-		{VARIABLE next_wave_label "Turn 35: Knights"}
+		{VARIABLE next_wave_label "Turn 36: Knights"}
 	)}
 
-	{DOV_WAVE 35 (
+	{DOV_WAVE 36 (
 		{LAND_B_2 "Knight"}
 		{LAND_B_1 "Paladin"}
 		{LAND_A_2 "Lancer"}
-		{VARIABLE next_wave_label "Turn 37: Mages and Sorcerers"}
+		{VARIABLE next_wave_label "Turn 38: Mages and Sorcerers"}
 	)}
 
-	{DOV_WAVE 37 (
+	{DOV_WAVE 38 (
 		{LAND_B_3 "Red Mage"}
 		{LAND_A_2 "Dark Sorcerer"}
 		{LAND_A_1 "Silver Mage"}
-		{VARIABLE next_wave_label "Turn 40: Saurians"}
+		{VARIABLE next_wave_label "Turn 41: Saurians"}
 	)}
 
-	{DOV_WAVE 40 (
+	{DOV_WAVE 41 (
 		{BORDER_2 "Saurian Skirmisher"}
 		{LAND_A_3 "Saurian Ambusher"}
 		{LAND_A_2 "Saurian Soothsayer"}
@@ -416,17 +416,17 @@
 		{LAND_B_1 "Saurian Oracle"}
 		{LAND_B_2 "Saurian Soothsayer"}
 		{LAND_B_3 "Saurian Ambusher"}
-		{VARIABLE next_wave_label "Turn 41: Assassins"}
+		{VARIABLE next_wave_label "Turn 42: Assassins"}
 	)}
 
-	{DOV_WAVE 41 (
+	{DOV_WAVE 42 (
 		{LAND_A_1 "Orcish Slayer"}
 		{LAND_A_2 "Orcish Slayer"}
 		{LAND_A_3 "Orcish Slayer"}
 		{LAND_B_1 "Assassin"}
 		{LAND_B_2 "Assassin"}
 		{LAND_B_3 "Assassin"}
-		{VARIABLE next_wave_label "Turn 45: WIN!"}
+		{VARIABLE next_wave_label "Turn 46: WIN!"}
 	)}
 
 [/multiplayer]
