--- a/macros/empowerments.cfg
+++ b/macros/empowerments.cfg
@@ -2,7 +2,7 @@
 
 #define DOV_EFFECT APPLICATION ADJUSTMENT ARG X Y
 	[object]
-    	silent=yes
+	silent=yes
 		[filter]
 			x,y={X},{Y}
 		[/filter]
@@ -13,6 +13,9 @@
 	[/object]
 #enddef
 
+#define GIVETRAIT TRAIT X Y
+#enddef
+
 #define EMPOWERMENT SIDE X Y
 	[if]
 		[have_unit]
@@ -20,81 +23,68 @@
 			side={SIDE}
 		[/have_unit]
 		[then]
-			{RANDOM 1..4}
+			{RANDOM 1..6}
 			[switch]
 				variable=random
 				[case]
 					value=1
-					# RESISTANCE
-
-					{VARIABLE bonus_desc (_"resistance")}
-					[object]
-				    		silent=yes
+					[modify_unit]
 						[filter]
 							x,y={X},{Y}
 						[/filter]
-						[effect]
-							apply_to=resistance
-							replace=no
-							[resistance]
-								cold=-$bonus.$bonus_desc
-							[/resistance]
-						[/effect]
-						[effect]
-							apply_to=resistance
-							replace=no
-							[resistance]
-								fire=-$bonus.$bonus_desc
-							[/resistance]
-						[/effect]
-						[effect]
-							apply_to=resistance
-							replace=no
-							[resistance]
-								arcane=-$bonus.$bonus_desc
-							[/resistance]
-						[/effect]
-						[effect]
-							apply_to=resistance
-							replace=no
-							[resistance]
-								blade=-$bonus.$bonus_desc
-							[/resistance]
-						[/effect]
-						[effect]
-							apply_to=resistance
-							replace=no
-							[resistance]
-								impact=-$bonus.$bonus_desc
-							[/resistance]
-						[/effect]
-						[effect]
-							apply_to=resistance
-							replace=no
-							[resistance]
-								pierce=-$bonus.$bonus_desc
-							[/resistance]
-						[/effect]
-					[/object]
+						{TRAIT_STRONG}
+					[/modify_unit]
+					{VARIABLE bonus_desc "strong"}
 				[/case]
 				[case]
 					value=2
-					# HP BONUS 
-					{VARIABLE bonus_desc "hp"}
-					{DOV_EFFECT hitpoints increase_total $bonus.$bonus_desc {X} {Y}}
-					{DOV_EFFECT hitpoints increase $bonus.$bonus_desc {X} {Y}}
+					[modify_unit]
+						[filter]
+							x,y={X},{Y}
+						[/filter]
+						{TRAIT_QUICK}
+					[/modify_unit]
+					{VARIABLE bonus_desc "quick"}
 				[/case]
 				[case]
 					value=3
-					# DAMAGE BONUS
-					{VARIABLE bonus_desc "damage"}
-					{DOV_EFFECT attack increase_damage $bonus.$bonus_desc {X} {Y}}
+					[modify_unit]
+						[filter]
+							x,y={X},{Y}
+						[/filter]
+						{TRAIT_INTELLIGENT}
+					[/modify_unit]
+					{VARIABLE bonus_desc "intelligent"}
 				[/case]
 				[case]
 					value=4
-					# MOVES BONUS
-					{VARIABLE bonus_desc "moves"}
-					{DOV_EFFECT movement increase $bonus.$bonus_desc {X} {Y}}
+					[modify_unit]
+						[filter]
+							x,y={X},{Y}
+						[/filter]
+						{TRAIT_RESILIENT}
+					[/modify_unit]
+					{VARIABLE bonus_desc "resilient"}
+				[/case]
+				[case]
+					value=5
+					[modify_unit]
+						[filter]
+							x,y={X},{Y}
+						[/filter]
+						{TRAIT_DEXTROUS}
+					[/modify_unit]
+					{VARIABLE bonus_desc "dextrous"}
+				[/case]
+				[case]
+					value=6
+					[modify_unit]
+						[filter]
+							x,y={X},{Y}
+						[/filter]
+						{TRAIT_HEALTHY}
+					[/modify_unit]
+					{VARIABLE bonus_desc "healthy"}
 				[/case]
 			[/switch]
 			{SET_LABEL {X} {Y} $bonus_desc}
