--- a/scenarios/3p_Orosh.cfg
+++ b/scenarios/3p_Orosh.cfg
@@ -1,11 +1,130 @@
-# 3p-Orosh v5.0 (updated for Wesnoth 1.10)
+# 3p-Orosh v5.2 (updated for Wesnoth 1.10)
 # by Dovolente - March 2011
 # by Zooko - November 2014
 
+#define BW_NEW_LEADER SIDE
+  [store_unit]
+    kill=no
+    variable=side_units
+    [filter]
+      side={SIDE}
+    [/filter]
+    [filter]
+      can xyz={SIDE}
+    [/filter]
+  [/store_unit]
+  {VARIABLE max_value 0}
+  [set_variable]
+    name=max_value
+    value=0
+  [/set_variable]
+  {VARIABLE max_index 0}
+  [set_variable]
+    name=max_index
+    value=0
+  [/set_variable]
+  {FOREACH side_units index}
+    [set_variable]
+      name=unit_xp
+      to_variable=side_units[$index].experience
+    [/set_variable]
+    [set_variable]
+      name=unit_hp
+      to_variable=side_units[$index].hitpoints
+    [/set_variable]
+    [set_variable]
+      name=unit_level
+      to_variable=side_units[$index].level
+    [/set_variable]
+    {VARIABLE unit_value $unit_xp}
+    {VARIABLE_OP unit_value add $unit_hp}
+    {VARIABLE_OP unit_level multiply 50}
+    {VARIABLE_OP unit_value add $unit_level}
+    [if]
+      [variable]
+        name=unit_hp
+        less_than=1
+      [/variable]
+      [then]
+        {VARIABLE unit_value 0}
+        [set_variable]
+          name=unit_value
+          value=0
+        [/set_variable]
+      [/then]
+    [/if]
+    [if]
+      [variable]
+        name=unit_value
+        greater_than=$max_value
+      [/variable]
+      [then]
+        {VARIABLE max_value $unit_value}
+        [set_variable]
+          name=max_index
+          value=$index
+        [/set_variable]
+      [/then]
+    [/if]
+  {NEXT index}
+  [if]
+    [variable]
+      name=max_value
+      greater_than=0
+    [/variable]
+    [then]
+      [set_variable]
+        name=scrollx
+        to_variable=side_units[$max_index].x
+      [/set_variable]
+      [set_variable]
+        name=scrolly
+        to_variable=side_units[$max_index].y
+      [/set_variable]
+      [set_variable]
+        name=side_units[$max_index].canrecruit
+        value=yes
+      [/set_variable]
+      [set_variable]
+        name=side_units[$max_index].role
+        value="leader"
+      [/set_variable]
+      [scroll_to]
+        x=$scrollx
+        y=$scrolly
+      [/scroll_to]
+      [sound]
+        name=fanfare-short.wav
+      [/sound]
+      [message]
+        speaker=side_units[$max_index]
+	message="Follow me!"
+        green=255
+        size=20
+      [/message]
+      [unstore_unit]
+        variable=side_units[$max_index]
+      [/unstore_unit]
+    [/then]
+  [/if]
+#enddef
+
+#define RENEWABLE_LEADERS SIDE
+[event]
+  name=die
+  first_time_only=no
+  [filter]
+    side={SIDE}
+    canrecruit=yes
+  [/filter]
+  {BW_NEW_LEADER {SIDE}}
+[/event]
+#enddef
 
 [multiplayer]
 	id=Dov_MP_Orosh
 	name= _ "3p - Orosh"
+	random_start_time=no
 
 	#define OROSH_FIRST_UNIT TYPE X Y
 		[unit]
@@ -18,7 +137,7 @@
 	#enddef
 
 	map_data="{~add-ons/Zooko-addon/maps/orosh.map}"
-	description= _ "A 3-Player Survival Scenario. Work together to protect a powerful shrine from hordes of invaders. Win by surviving until turn 46. At the start of their turn, a player may get bonus hp, moves, damage, or resistance for their units."
+	description= _ "A 3-Player Survival Scenario. Work together to protect a powerful shrine from hordes of invaders. Win by surviving until turn 44. At the start of their turn, a unit on the right hexes gets a trait."
 	turns="-1"
 	victory_when_enemies_defeated=no
 	experience_modifier=70%
@@ -121,7 +240,6 @@
 		description=Human
 		side=3
 		canrecruit=yes
-		enemy=4
 		controller=human
 # 		[ai]
 # 			aggression=-2.0
@@ -191,26 +309,16 @@
 		{PLACE_IMAGE "items/scarecrow.png" 12 19}
 		{PLACE_IMAGE "items/scarecrow.png" 23 9}
 
-		#set bonus amounts
-		{VARIABLE bonus.hp +20%}
-		{VARIABLE bonus.resistance 10}
-		{VARIABLE bonus.moves +1}
-		{VARIABLE bonus.damage +20%}
-
 		[objectives]
 			[objective]
-				description=_"Survive til turn 46."
+				description=_"Survive til turn 44."
 				condition=win
 			[/objective]
 			[note]
-				description=_"At the start of your turn, any of your units may receive a bonus if they are within the castle walls and on the grassy area on your side of the shrine. v5.0.20"
+				description=_"At the start of your turn, any of your units may receive a bonus if they are within the castle walls and on the grassy area on your side of the shrine. v5.3.70"
 			[/note]
 			[note]
-				description=_"Bonuses:	
-	 <span color='#BCB088' weight='bold'>damage</span>: $bonus.damage
-	 <span color='#BCB088' weight='bold'>hp</span>: $bonus.hp
-	 <span color='#BCB088' weight='bold'>moves</span>: $bonus.moves
-	 <span color='#BCB088' weight='bold'>resistance</span>: $bonus.resistance"
+				description=_"Bonuses:	a random trait (of 6)"
 			[/note]
 			[note]
 				description=_"See the <b>Dov MP Pack</b> thread on the official forums (multiplayer board) for info or to give feedback."
@@ -260,7 +368,7 @@
 	[/event]
 
 	[event]
-		name=turn 46
+		name=turn 44
 		[endlevel]
 			result=victory
 		[/endlevel]
@@ -281,17 +389,10 @@
 		[/message]
 	[/event]
 
-	[event]
-		name=die
-		first_time_only=no
-		[filter]
-			canrecruit=yes
-		[/filter]
-		[message]
-			speaker=unit
-			message= _ "It was not meant to be..."
-		[/message]
-	[/event]
+	{RENEWABLE_LEADERS 1}
+	{RENEWABLE_LEADERS 2}
+	{RENEWABLE_LEADERS 3}
+
 
 	[event]
 		name=side 1 turn
@@ -347,68 +448,68 @@
 		{LAND_B_1 "Mage"}
 		{LAND_B_2 "Spearman"}
 		{LAND_A_2 "Cavalryman"}
-		{VARIABLE next_wave_label "Turn 16: Northerners"}
+		{VARIABLE next_wave_label "Turn 14: Northerners"}
 	)}
 
-	{DOV_WAVE 16 (
+	{DOV_WAVE 14 (
 		{LAND_B_2 "Orcish Archer"}
 		{LAND_A_1 "Troll"}
 		{LAND_A_2 "Wolf Rider"}
-		{VARIABLE next_wave_label "Turn 20: Elves"}
+		{VARIABLE next_wave_label "Turn 18: Elves"}
 	)}
 
-	{DOV_WAVE 20 (
+	{DOV_WAVE 18 (
 		{LAND_B_1 "Elvish Captain"}
 		{LAND_B_2 "Elvish Archer"}
 		{LAND_A_2 "Wose"}
 		{BORDER_2 "Merman Hunter"}
-		{VARIABLE next_wave_label "Turn 24: Ogres and Netcasters"}
+		{VARIABLE next_wave_label "Turn 22: Ogres and Netcasters"}
 	)}
 
-	{DOV_WAVE 24 (
+	{DOV_WAVE 22 (
 		{LAND_A_3 "Young Ogre"}
 		{LAND_B_2 "Ogre"}
 		{BORDER_1 "Merman Netcaster"}
-		{VARIABLE next_wave_label "Turn 26: Bats and Shadows"}
+		{VARIABLE next_wave_label "Turn 24: Bats and Shadows"}
 	)}
 
-	{DOV_WAVE 26 (
+	{DOV_WAVE 24 (
 		{BORDER_2 "Blood Bat"}
 		{LAND_A_3 "Vampire Bat"}
 		{LAND_B_2 "Shadow"}
-		{VARIABLE next_wave_label "Turn 29: Drakes"}
+		{VARIABLE next_wave_label "Turn 27: Drakes"}
 	)}
 
-	{DOV_WAVE 29 (
+	{DOV_WAVE 27 (
 		{LAND_A_2 "Drake Fighter"}
 		{LAND_B_1 "Drake Warrior"}
 		{LAND_B_2 "Drake Clasher"}
 		{BORDER_1 "Drake Burner"}
-		{VARIABLE next_wave_label "Turn 33: Knalgans"}
+		{VARIABLE next_wave_label "Turn 31: Knalgans"}
 	)}
 
-	{DOV_WAVE 33 (
+	{DOV_WAVE 31 (
 		{BORDER_2 "Gryphon Rider"}
 		{LAND_B_2 "Dwarvish Berserker"}
 		{LAND_A_2 "Dwarvish Thunderguard"}
-		{VARIABLE next_wave_label "Turn 36: Knights"}
+		{VARIABLE next_wave_label "Turn 34: Knights"}
 	)}
 
-	{DOV_WAVE 36 (
+	{DOV_WAVE 34 (
 		{LAND_B_2 "Knight"}
 		{LAND_B_1 "Paladin"}
 		{LAND_A_2 "Lancer"}
-		{VARIABLE next_wave_label "Turn 38: Mages and Sorcerers"}
+		{VARIABLE next_wave_label "Turn 36: Mages and Sorcerers"}
 	)}
 
-	{DOV_WAVE 38 (
+	{DOV_WAVE 36 (
 		{LAND_B_3 "Red Mage"}
 		{LAND_A_2 "Dark Sorcerer"}
 		{LAND_A_1 "Silver Mage"}
-		{VARIABLE next_wave_label "Turn 41: Saurians"}
+		{VARIABLE next_wave_label "Turn 39: Saurians"}
 	)}
 
-	{DOV_WAVE 41 (
+	{DOV_WAVE 39 (
 		{BORDER_2 "Saurian Skirmisher"}
 		{LAND_A_3 "Saurian Ambusher"}
 		{LAND_A_2 "Saurian Soothsayer"}
@@ -416,17 +517,17 @@
 		{LAND_B_1 "Saurian Oracle"}
 		{LAND_B_2 "Saurian Soothsayer"}
 		{LAND_B_3 "Saurian Ambusher"}
-		{VARIABLE next_wave_label "Turn 42: Assassins"}
+		{VARIABLE next_wave_label "Turn 40: Assassins"}
 	)}
 
-	{DOV_WAVE 42 (
+	{DOV_WAVE 40 (
 		{LAND_A_1 "Orcish Slayer"}
 		{LAND_A_2 "Orcish Slayer"}
 		{LAND_A_3 "Orcish Slayer"}
 		{LAND_B_1 "Assassin"}
 		{LAND_B_2 "Assassin"}
 		{LAND_B_3 "Assassin"}
-		{VARIABLE next_wave_label "Turn 46: WIN!"}
+		{VARIABLE next_wave_label "Turn 44: WIN!"}
 	)}
 
 [/multiplayer]
